engine/baml-lib/baml/tests/validation_files/class/unknown_type.baml
class InterfaceTwo {
  interface string
  prop2 Bar
}






// error: Type `Bar` does not exist. Did you mean one of these: `int`, `bool`, `float`, `string`?
//   -->  class/unknown_type.baml:3
//    | 
//  2 |   interface string
//  3 |   prop2 Bar
//    | 
